cluster/gitops/media/kyoo/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kyoo
  labels:
    app.kubernetes.io/name: kyoo
    app.kubernetes.io/instance: kyoo
spec:
  hostnames:
    - kyoo.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: kyoo-backend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /api
    - backendRefs:
        - name: kyoo-frontend
          port: 80
